--- a/src/ui/staff/staff.fxml
+++ b/src/ui/staff/staff.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
@@ -128,14 +129,26 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0" style="-fx-background-color: white;">
               <columns>
-                <TableColumn prefWidth="110.0" text="Staff ID" />
-                <TableColumn prefWidth="200.0" text="First Name" />
-                  <TableColumn prefWidth="200.0" text="Surname" />
-                  <TableColumn prefWidth="150.0" text="Salary" />
-                  <TableColumn minWidth="0.0" prefWidth="134.0" text="Position" />
-                  <TableColumn minWidth="0.0" prefWidth="205.0" text="Status" />
+                <TableColumn fx:id="staffID" prefWidth="110.0" text="Staff ID">
+                   <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="firstName" prefWidth="200.0" text="First Name">
+                   <cellValueFactory><PropertyValueFactory property="firstName" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn fx:id="surname" prefWidth="200.0" text="Surname">
+                     <cellValueFactory><PropertyValueFactory property="surname" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="salary" prefWidth="150.0" text="Salary">
+                     <cellValueFactory><PropertyValueFactory property="salary" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="position" minWidth="0.0" prefWidth="134.0" text="Position">
+                     <cellValueFactory><PropertyValueFactory property="position" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="status" minWidth="0.0" prefWidth="205.0" text="Status">
+                     <cellValueFactory><PropertyValueFactory property="status" /></cellValueFactory>
+                  </TableColumn>
               </columns>
             </TableView>
             <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
@@ -153,7 +166,7 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
+            <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" onAction="#clickRefresh" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
