--- a/src/ui/inventory/inventory.fxml
+++ b/src/ui/inventory/inventory.fxml
@@ -136,10 +136,12 @@
             </Text>
             <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Item ID" />
-                <TableColumn prefWidth="223.0" text="Type" />
-                  <TableColumn prefWidth="328.0" text="Name" />
-                  <TableColumn prefWidth="373.0" text="Stored" />
+                <TableColumn minWidth="166.0" prefWidth="0.0" text="Item ID" />
+                <TableColumn minWidth="166.0" prefWidth="170.0" text="Name" />
+                  <TableColumn minWidth="166.0" prefWidth="130.0" text="Type" />
+                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Stored" />
+                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Vendor" />
+                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Sell Price" />
               </columns>
             </TableView>
             <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
