--- a/src/ui/staff/edit_staff.fxml
+++ b/src/ui/staff/edit_staff.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.edit_staffController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.edit_staffController">
    <children>
       <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT STAFF">
          <font>
@@ -32,23 +36,6 @@
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="336.0" layoutY="175.0" prefWidth="202.0" promptText="Status">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <MenuButton layoutX="67.0" layoutY="248.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="202.0" text="Position">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Barista" />
-            <MenuItem mnemonicParsing="false" text="Cashier" />
-            <MenuItem mnemonicParsing="false" text="Sales" />
-            <MenuItem mnemonicParsing="false" text="Social Media" />
-            <MenuItem mnemonicParsing="false" text="Operations" />
-         </items>
-         <font>
-            <Font name="Segoe UI" size="15.0" />
-         </font>
-      </MenuButton>
       <Button fx:id="done" layoutX="372.0" layoutY="357.0" mnemonicParsing="false" onAction="#clickDone" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -59,5 +46,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <ComboBox fx:id="status" layoutX="336.0" layoutY="176.0" prefHeight="30.0" prefWidth="202.0" promptText="Status" />
+      <ComboBox fx:id="position" layoutX="67.0" layoutY="228.0" prefHeight="30.0" prefWidth="202.0" promptText="Position" />
    </children>
 </Pane>
