--- a/src/ui/staff/edit_staff.fxml
+++ b/src/ui/staff/edit_staff.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.edit_staffController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.staff.edit_staffController">
    <children>
       <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT STAFF">
          <font>
@@ -21,17 +17,17 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Frst Name">
+      <TextField fx:id="firstName" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Frst Name">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Surname">
+      <TextField fx:id="surname" layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Surname">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="67.0" layoutY="175.0" prefHeight="31.0" prefWidth="202.0" promptText="Salary">
+      <TextField fx:id="salary" layoutX="67.0" layoutY="175.0" prefHeight="31.0" prefWidth="202.0" promptText="Salary">
          <font>
             <Font size="15.0" />
          </font>
