--- a/src/ui/finances/finances.fxml
+++ b/src/ui/finances/finances.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.finances.financesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.finances.financesController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
@@ -128,11 +134,11 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
+            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="450.0">
               <columns>
-                <TableColumn prefWidth="333.0" text="Date" />
-                <TableColumn prefWidth="333.0" text="Income" />
-                  <TableColumn prefWidth="333.0" text="Expenses" />
+                <TableColumn prefWidth="150.0" text="Date" />
+                <TableColumn prefWidth="150.0" text="Income" />
+                  <TableColumn prefWidth="150.0" text="Expenses" />
               </columns>
             </TableView>
             <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" onAction="#clickRefresh" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
@@ -140,6 +146,18 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <TableView layoutX="599.0" layoutY="71.0" prefHeight="400.0" prefWidth="450.0">
+               <columns>
+                  <TableColumn prefWidth="150.0" text="Date" />
+                  <TableColumn prefWidth="150.0" text="Detail" />
+                  <TableColumn prefWidth="150.0" text="Amount" />
+               </columns>
+            </TableView>
+            <Text fill="WHITE" layoutX="599.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EXPENSES DETAILS">
+               <font>
+                  <Font name="Segoe UI" size="25.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </center>
