--- a/src/ui/inventory/edit_item.fxml
+++ b/src/ui/inventory/edit_item.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.edit_itemController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.edit_itemController">
    <children>
       <Text layoutX="240.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EDIT ITEM">
          <font>
@@ -17,11 +23,6 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Type">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
       <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Name">
          <font>
             <Font size="15.0" />
@@ -49,5 +50,6 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <ComboBox layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" />
    </children>
 </Pane>
