--- a/src/ui/inventory/new_item.fxml
+++ b/src/ui/inventory/new_item.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,11 +21,6 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Type">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
       <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Name">
          <font>
             <Font size="15.0" />
@@ -60,5 +56,6 @@
             <Font size="15.0" />
          </font>
       </TextField>
+      <ComboBox layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" />
    </children>
 </Pane>
