--- a/src/ui/inventory/inventory.fxml
+++ b/src/ui/inventory/inventory.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.inventoryController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.inventory.inventoryController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
@@ -134,14 +129,29 @@
                   <Font name="Segoe UI" size="25.0" />
                </font>
             </Text>
-            <TableView layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
+            <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
               <columns>
-                <TableColumn minWidth="166.0" prefWidth="0.0" text="Item ID" />
-                <TableColumn minWidth="166.0" prefWidth="170.0" text="Name" />
-                  <TableColumn minWidth="166.0" prefWidth="130.0" text="Type" />
-                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Stored" />
-                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Vendor" />
-                  <TableColumn minWidth="166.0" prefWidth="0.0" text="Sell Price" />
+                <TableColumn fx:id="itemID" minWidth="138.0" prefWidth="0.0" text="Item ID">
+                 <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="name" minWidth="138.0" prefWidth="170.0" text="Name">
+                   <cellValueFactory><PropertyValueFactory property="name" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn fx:id="type" minWidth="138.0" prefWidth="130.0" text="Type">
+                     <cellValueFactory><PropertyValueFactory property="type" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="vendor" minWidth="138.0" prefWidth="0.0" text="Vendor">
+                     <cellValueFactory><PropertyValueFactory property="vendor" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="stored" minWidth="138.0" prefWidth="0.0" text="Stored">
+                     <cellValueFactory><PropertyValueFactory property="stored" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="sellable" minWidth="138.0" prefWidth="0.0" text="Sell-able">
+                     <cellValueFactory><PropertyValueFactory property="sellable" /></cellValueFactory>
+                  </TableColumn>
+                 <TableColumn fx:id="sellPrice" minWidth="138.0" prefWidth="0.0" text="Sell Price">
+                    <cellValueFactory><PropertyValueFactory property="price" /></cellValueFactory>
+                 </TableColumn>
               </columns>
             </TableView>
             <Button fx:id="delete" layoutX="941.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickDelete" prefHeight="39.0" prefWidth="108.0" style="-fx-background-color: #f22424;" text="DELETE">
