--- a/src/ui/inventory/add_item.fxml
+++ b/src/ui/inventory/add_item.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,7 +20,7 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Name">
+      <TextField disable="true" layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="471.0" promptText="Name">
          <font>
             <Font size="15.0" />
          </font>
@@ -36,26 +35,15 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <TextField layoutX="67.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Stored">
+      <TextField layoutX="67.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Purschase Cost">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="67.0" layoutY="244.0" prefHeight="31.0" prefWidth="202.0" promptText="Purschase Cost">
+      <TextField layoutX="336.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Buy Count">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <TextField layoutX="336.0" layoutY="185.0" prefHeight="31.0" prefWidth="202.0" promptText="Vendor">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="336.0" layoutY="244.0" prefHeight="31.0" prefWidth="202.0" promptText="Buy Count">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <ComboBox layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" />
    </children>
 </Pane>
