--- a/src/ui/inventory/new_item.fxml
+++ b/src/ui/inventory/new_item.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -57,5 +58,10 @@
          </font>
       </TextField>
       <ComboBox layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" />
+      <CheckBox layoutX="67.0" layoutY="299.0" mnemonicParsing="false" text="Sell-able">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </CheckBox>
    </children>
 </Pane>
