--- a/src/ui/sales/add_item_sales.fxml
+++ b/src/ui/sales/add_item_sales.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -20,16 +21,6 @@
             <Image url="@../Images/logo.jpeg" />
          </image>
       </ImageView>
-      <TextField layoutX="67.0" layoutY="124.0" prefHeight="31.0" prefWidth="202.0" promptText="Item ID">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
-      <TextField layoutX="336.0" layoutY="124.0" prefHeight="30.0" prefWidth="202.0" promptText="Item Price">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </TextField>
       <Button layoutX="372.0" layoutY="357.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: #000000;" text="DONE" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
@@ -40,5 +31,12 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
+      <TableView layoutX="71.0" layoutY="113.0" prefHeight="200.0" prefWidth="450.0">
+        <columns>
+          <TableColumn prefWidth="150.0" text="Item Name" />
+          <TableColumn prefWidth="150.0" text="Item Price" />
+            <TableColumn prefWidth="150.0" text="Item Count" />
+        </columns>
+      </TableView>
    </children>
 </Pane>
