--- a/src/ui/sales/sales.fxml
+++ b/src/ui/sales/sales.fxml
@@ -146,7 +146,7 @@
             <TableView layoutX="664.0" layoutY="71.0" prefHeight="400.0" prefWidth="385.0">
               <columns>
                 <TableColumn prefWidth="125.0" text="ID" />
-                <TableColumn prefWidth="125.0" text="Item ID" />
+                <TableColumn prefWidth="125.0" text="Item Name" />
                   <TableColumn prefWidth="134.0" text="Item Price" />
               </columns>
             </TableView>
