--- a/src/ui/history/history.fxml
+++ b/src/ui/history/history.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.history.historyController">
    <top>
       <AnchorPane prefHeight="115.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
@@ -130,14 +131,30 @@
             </Text>
             <TableView fx:id="table" layoutX="49.0" layoutY="71.0" prefHeight="400.0" prefWidth="1000.0">
               <columns>
-                <TableColumn fx:id="id" prefWidth="100.0" text="ID" />
-                <TableColumn fx:id="date" prefWidth="100.0" text="Date" />
-                  <TableColumn fx:id="type" prefWidth="100.0" text="Type" />
-                  <TableColumn fx:id="name" prefWidth="150.0" text="Name" />
-                  <TableColumn fx:id="vendor" prefWidth="125.0" text="Vendor" />
-                  <TableColumn fx:id="staffID" prefWidth="125.0" text="Staff ID" />
-                  <TableColumn fx:id="purchaseCost" prefWidth="150.0" text="Purchase Cost" />
-                  <TableColumn fx:id="buyCount" prefWidth="150.0" text="Buy Count" />
+                <TableColumn fx:id="id" prefWidth="100.0" text="ID">
+                   <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="date" prefWidth="100.0" text="Date">
+                   <cellValueFactory><PropertyValueFactory property="date" /></cellValueFactory>
+                </TableColumn>
+                  <TableColumn fx:id="type" prefWidth="100.0" text="Type">
+                     <cellValueFactory><PropertyValueFactory property="type" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="name" prefWidth="150.0" text="Name">
+                     <cellValueFactory><PropertyValueFactory property="name" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="vendor" prefWidth="125.0" text="Vendor">
+                     <cellValueFactory><PropertyValueFactory property="vendor" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="staffID" prefWidth="125.0" text="Staff ID">
+                     <cellValueFactory><PropertyValueFactory property="staff" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="purchaseCost" prefWidth="150.0" text="Purchase Cost">
+                     <cellValueFactory><PropertyValueFactory property="purchaseCost" /></cellValueFactory>
+                  </TableColumn>
+                  <TableColumn fx:id="buyCount" prefWidth="150.0" text="Buy Count">
+                     <cellValueFactory><PropertyValueFactory property="buyCount" /></cellValueFactory>
+                  </TableColumn>
               </columns>
             </TableView>
             <Button fx:id="refresh" layoutX="948.0" layoutY="24.0" mnemonicParsing="false" onAction="#clickRefresh" prefHeight="39.0" prefWidth="101.0" style="-fx-background-color: #FFFFFF;" text="REFRESH">
