--- a/src/ui/inventory/edit_item.fxml
+++ b/src/ui/inventory/edit_item.fxml
@@ -58,5 +58,10 @@
             <Font size="15.0" />
          </font>
       </CheckBox>
+      <TextField fx:id="sellPrice" layoutX="336.0" layoutY="304.0" prefHeight="31.0" prefWidth="202.0" promptText="Sell Price">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </TextField>
    </children>
 </Pane>
